--- a/index.html
+++ b/index.html
@@ -100,7 +100,28 @@
                     ourselves to drop some knowledge, share insights, let out insider tips, and put our work on full
                     display</h5>
             </div>
-            <div id="page2-right"></div>
+            <div id="page2-right">
+                <div class="right-elem" id="right-elem1">
+                    <h2>How To Design An AI InterFace Users will <br>Trust In 2024 ?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>How To Design An AI InterFace Users will <br>Trust In 2024 ?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>How To Design An AI InterFace Users will <br>Trust In 2024 ?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>How To Design An AI InterFace Users will <br>Trust In 2024 ?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+            </div>
         </div>
     </div>
     
