--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LAZAREV. 🪀 — Digital Product Design Agency | Award Winning UX & UI Agency</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+    <link rel="shortcut icon" href="https://assets-global.website-files.com/64a2ab71942e1d57feb6fe39/6528221f95333ff155d01ad2_fav.gif" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -260,12 +262,57 @@
         </div>
 
         <div id="page6">
-            
+            <h1>Digital Product Design Process</h1>
+            <div id="page6-content">
+                <div id="blue-btn">
+                    <h4>See All Case Studies <i class="ri-arrow-right-up-line"></i></h4>
+                    <h4>See All Case Studies <i class="ri-arrow-right-up-line"></i></h4>
+
+                </div>
+                <div id="right-6">
+                    <p>We do not take on projects that involve blind conformity or designing out of context. We won't
+                        settle for a user interface design that is misaligned with your product and digital strategy.
+                        Neither will we launch web development ventures without user testing to validate our design
+                        solutions.</p>
+                    <p>Instead, we create scalable digital products that meet the ever-evolving demands of our
+                        customers, ensuring long-term sustainability.</p>
+                </div>
+            </div>
+            <div id="page6-bottom">
+                <div id="btm6-part1" class="btm6-parts"></div>
+                <div id="btm6-part2" class="btm6-parts">
+                    <h5>Product Strategy</h5>
+                    <h4><span>1</span> Strategy Workshop</h4>
+                    <h4><span>2</span> Idea Validation</h4>
+                    <h4><span>3</span> Market Research</h4>
+                    <h4><span>4</span> Product Positioning</h4>
+                    <h4><span>5</span> UX Research</h4>
+                    <h4><span>6</span> Functional Decomposition</h4>
+                </div>
+                <div id="btm6-part3" class="btm6-parts" >
+                    <h5>UX Design</h5>
+                    <h4><span>1</span> Strategy </h4>
+                    <h4><span>2</span> Idea </h4>
+                </div>
+                <div id="btm6-part4" class="btm6-parts">
+                    <h5>UI Design</h5>
+                    <h4><span>1</span> Strategy </h4>
+                    <h4><span>2</span> Idea </h4>
+                    <h4><span>2</span> Idea </h4>
+                </div>
+                <div id="btm6-part5" class="btm6-parts">
+                    <h5>Delivery</h5>
+                </div>
+            </div>
         </div>
+
+        <div id="page7"></div>
     <!-- end of main-->
     </div>
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/ScrollTrigger.min.js" integrity="sha512-AcqPGqrrAEtEwe+ADO5R8RbdFi7tuU7b/A2cJJH0Im0D18NRk5p5s4B3E5PMuO81KFw0ClN7J5SHVUJz7KOb0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
